-
Type:
Bug
-
Resolution: Done
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Testing Infrastructure
-
None
-
ALL
-
0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Consider the scope of this ticket to be just the replicasets and sharding tests on Linux 64. We need to figure out if the slowdown seen in our test suites is expected or unexpected behavior.
replicasets - usually 1 hour and 5 minutes
replicasets_auth - usually 2 hours and 15 minutes
sharding - usually 50 minutes
sharding_auth - usually 2 hours and 20 minutes
- is duplicated by
-
SERVER-12490 jsTest.authenticate causing ReplSetTest.getMaster to time out
-
- Closed
-