SERVER-10848 Speed up auth passthrough tests by using the internal user instead of a real admin user