src/mongo/shell/shardingtest.js
@@ -400,7 +400,6 @@ ShardingTest = function( testName , numShards , verboseLevel , numMongos , other
     }
 
     if (jsTestOptions().keyFile || jsTestOptions().useX509) {
-        jsTest.addAuth( this.s );
         jsTest.authenticate( this._configConnection );
         jsTest.authenticateNodes( this._configServers );
         jsTest.authenticateNodes( this._mongos );
